# robif2b

./: CMakeLists.txt  README.md
cmake/: FindKortexApi.cmake
include/robif2b/functions/: freddy_2_power_board.h
include/robif2b/types/: freddy_2_power_board.h  freddy_2_power_board_api.h
src/example/: CMakeLists.txt  freddy_2_example.c
src/nbx/kelo/: CMakeLists.txt  freddy_2_power_board.c
